--- a/src/components/ActionButton/styles.scss
+++ b/src/components/ActionButton/styles.scss
@@ -8,6 +8,7 @@
     border: none;
     outline: none;
     border-radius: 8px;
+    cursor: pointer;
 }
 .secondary {
     width: 100%;
@@ -21,4 +22,5 @@
     font-size: 20px;
     color: #fb6c00;
     margin: auto;
+    cursor: pointer;
 }
